# check-mate

./: .gitignore  checkmate.db  main.py  pyproject.toml  test_api.py  test_smoke.py
api/: auth.py  database.py  main.py  models.py  schemas.py
api/routers/: auth.py  check.py  frontend.py  users.py
logger/: __init__.py
model/: models.py
notebook/: experiment.ipynb
prompt/: prompt_library.py
src/checker/: claims_checker.py
src/data_ingestion/: data_ingestion.py
templates/: base.html  dashboard.html  login.html  register.html
utils/: document_ops.py  file_io.py
