[project]
name = "check-mate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "email-validator>=2.3.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.31",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]
